add color input picker, dropdown options and button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
   <body>
     <main>
       <div id="container">
-        <header></header>
+        <header>
+          <form>
+            <input type="color" />
+            <select name="mode">
+              <option value="">Option 1</option>
+              <option value="">Option 2</option>
+              <option value="">Option 3</option>
+            </select>
+            <button>Get Color Scheme</button>
+          </form>
+        </header>
         <div id="colors-container">
           <div></div>
           <div></div>
