get colors array

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div id="container">
         <header>
           <input type="color" />
-          <select name="mode">
+          <select name="mode" id="mode">
             <option value="monochrome">monochrome</option>
             <option value="monochrome-dark">monochrome-dark</option>
             <option value="monochrome-light">monochrome-light</option>
