display divs with color palette

--- a/index.html
+++ b/index.html
@@ -23,13 +23,7 @@
           </select>
           <button>Get Color Scheme</button>
         </header>
-        <div id="colors-container">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
+        <div id="colors-container"></div>
       </div>
     </main>
     <script src="index.js"></script>
